--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,15 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
 async-trait = "0.1"
-thiserror = "1.0"
+thiserror = "2.0.3"
 uuid = { version = "1.0", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-ratatui = "0.24.0"
-crossterm = "0.27.0"
+ratatui = "0.29.0"
+crossterm = "0.28.1"
 tempfile = "3.2.0"
 regex = "1.5.4"
 lazy_static = "1.4.0"
+sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid", "json"] }
+dirs = "5.0.1"
